# sneakers-ml

./: .dockerignore  .dvcignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/: dependabot.yml
.github/workflows/: build-api.yml  build-bot.yml  codecov.yaml
config/: cfg_clip.yaml  cfg_dl.yaml  cfg_merger.yaml  cfg_ml.yaml  cfg_resnet152_similarity_search.yaml  cfg_similarity_search.yaml  cfg_text_to_image.yaml
config/data/: brands_classification_with_footshop.yaml
config/models/: decision_tree.yaml  log_reg.yaml  random_forest.yaml  resnet152.yaml  sgd.yaml  svm.yaml  vit.yaml  vit_transformer.yaml
config/paths/: default.yaml
data/features/: .gitignore  brands-classification-with-footshop.dvc
data/merged-with-footshop/: images.dvc  metadata.dvc
data/models/: .gitignore  brands-classification-filtered.dvc  brands-classification-with-footshop.dvc  brands-classification.dvc  similarity_search.dvc
data/training/: brands-classification-with-footshop.dvc
deploy/: docker-compose.yml
deploy/app/: Dockerfile  Dockerfile.base
deploy/bot/: Dockerfile
docs/: data-description.md  eda-merging.md  features-models.md  launch-instructions.md  project-setup.md
notebooks/eda/: basic-eda.ipynb  hog-embedding-eda.ipynb  resnet-embedding-eda.ipynb  sift-embedding-eda .ipynb
notebooks/features/: HOG.ipynb  SIFT.ipynb  SIFT2.ipynb  resnet152.ipynb
notebooks/merger/: collab_splitter.ipynb  merger.ipynb  rename_path.ipynb
notebooks/models/: VIT_classification.ipynb  baseline.ipynb  clip_playground.ipynb  hog_simple_models.ipynb  predict.ipynb  resnet_fine_tune.ipynb  resnet_fine_tune_filtered.ipynb  resnet_similarity_search.ipynb  resnet_simple_models.ipynb  sift_simple_models.ipynb
notebooks/parser/: footshop.ipynb  highsnobiety_kickscrew.ipynb  sneakerbass.ipynb  superkicks.ipynb
sneakers_ml/app/: main.py
sneakers_ml/app/models/: image.py
sneakers_ml/app/routers/: classification.py  similarity.py  text_to_image.py
sneakers_ml/app/service/qdrant/: __init__.py
sneakers_ml/app/service/redis/: cache.py
sneakers_ml/bot/: main.py
sneakers_ml/bot/controller/: image.py  text.py
sneakers_ml/data/: split.py
sneakers_ml/data/merger/: merger.py
sneakers_ml/features/: base.py  hog.py  resnet152.py  sift.py
sneakers_ml/models/: base.py  clip.py  dl_classification_base.py  onnx_utils.py  predict.py  qdrant.py  quadrant.py  resnet152_classification.py  resnet152_classification_predict.py  resnet152_classification_train.py  resnet152_similarity_search.py  resnet152_similarity_search_predict.py  resnet152_similarity_search_train.py  similarity_search_base.py  train.py  train_ml.py  vit_classification.py  vit_classification_predict.py  vit_classification_train.py
tests/: old_predict_test.py
